--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ section {
 
 .logo {
     font-size: 2.5rem;
-    color: aqua;
+    color: #05fcdd;
     font-weight: 600;
     cursor: default;
 }
